# CRESSignalStructure

./: .gitignore  BatchGen.py  HarmonicComparison.ipynb  IMPORTS.md  README.md  RealisticFields.ipynb  SignalGenExample.ipynb  TestPowerSpec.ipynb  audit_split.py  check_phase_randomisation.py  pyproject.toml  split_h5.py  verify_batch.py
.github/workflows/: test.yml
CRESSignalStructure/: AntennaSignalGenerator.py  BaseAntenna.py  BaseField.py  BaseSpectrumCalculator.py  BaseTrap.py  CRESWriter.py  CircularWaveguide.py  CrossSections.py  DipoleAntennas.py  EnsembleGenerator.py  IsotropicAntenna.py  NumericalSpectrumCalculator.py  Particle.py  PowerSpectrumCalculator.py  QTNMTraps.py  RealFields.py  ReceiverChain.py  ScatteringSimulator.py  SignalGenerator.py  SpectrumCalculator.py  TrajectoryGenerator.py  __init__.py  datasets.py  scattering_utils.py
CRESSignalStructure/antennas/: BaseAntenna.py  DipoleAntennas.py  HFSSAntenna.py  HFSSDataParser.py  IsotropicAntenna.py  __init__.py
CRESSignalStructure/scattering/: BaseCrossSection.py  CrossSections.py  GasModel.py  ScatteringSimulator.py  __init__.py
data/antennas/: EFields.csv  (+2 more)
examples/: AntennaSignalGenerator_HFSSvsDipole.ipynb  DopplerEffectDemo.ipynb  GettingStarted.ipynb  HarmonicComparison.ipynb  MultiAntennaBeamforming.ipynb  RealisticFields.ipynb  SignalGenExample.ipynb  TestPowerSpec.ipynb  scattering_example.py  validate_cross_sections.py
src/: BaseField.py  BaseTrap.py  CircularWaveguide.py  NumericalSpectrumCalculator.py  PowerSpectrumCalculator.py  QTNMTraps.py  RealFields.py
tests/: __init__.py
(+25 files in other folders)
