[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cres-signal-structure"
version = "0.1.0"
description = "Python library for modeling CRES (Cyclotron Radiation Emission Spectroscopy) signals"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[tool.setuptools.packages.find]
include = ["CRESSignalStructure*"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
